--- a/tributeCite/index.html
+++ b/tributeCite/index.html
@@ -42,27 +42,31 @@
   <img class="card-img-top" src="img_avatar1.png" alt="Card image">
   <div class="card-body">
     <h4 class="card-title">Celia Bader</h4>
-    <p class="card-text">Celia was major influence in Ruth's life,she taught her the value of independence and a good education.</p>
+    <p class="card-text">Celia was major influence in Ruth's life,she taught her the value of independence and a good education. *No image found of Celia Bader</p>
 
   </div>
 </div>
     <div class="card" style="width:400px">
-  <img class="card-img-top" src="img_avatar1.png" alt="Card image">
+  <img class="card-img-top" src="images/WRC.2.jpg" alt="Card image">
   <div class="card-body">
     <h4 class="card-title">Womens Rights Campaign</h4>
     <p class="card-text">RBG co-founder inspired the campaign to support women and fight for equality in the workspace and everywhere.</p>
   
   </div>
             <div class="card" style="width:400px">
-  <img class="card-img-top" src="img_avatar1.png" alt="Card image">
+  <img class="card-img-top" src="images/DK.3.jpg" alt="Card image">
   <div class="card-body">
     <h4 class="card-title">Dorothy Kenyon</h4>
     <p class="card-text">She was inspired by her because she is slender, with a white bob beneath a broad-rimmed, floppy hat. Her eyes are vivacious; they can flash from humor to fiery passion without blinking.</p>
-    
-        
   </div>
 </div>
 
+</div>
+<div class="jumbotron">
+  <h1>Ruth bader Ginsburg</h1> 
+  <p>Ruth Bader Ginsburg was a Womans Rights Activists as she helped create her own campaign and has inspired many others. She was influenced by many fierce women and her mother.She worked really hard and became a Supreme Court Justice and is still today.
+     :https://www.biography.com/people/ruth-bader-ginsburg-9312041 :https://www.oyez.org/justices/ruth_bader_ginsburg :https://en.wikipedia.org/wiki/Ruth_Bader_Ginsburg
+  </p> 
 </div>
  
 
