--- a/webFinal/images/index.html
+++ b/webFinal/images/index.html
@@ -68,63 +68,15 @@
       <img src="images/Game.5.jpg" alt="Call of Duty Black Ops 4" width="1100" height="500">
     </div>
   </div>
-  
-  <!-- Left and right controls -->
-<!--  <a class="carousel-control-prev" href="#demo" data-slide="prev">-->
-<!--    <span class="carousel-control-prev-icon"></span>-->
-<!--  </a>-->
-<!--  <a class="carousel-control-next" href="#demo" data-slide="next">-->
-<!--    <span class="carousel-control-next-icon"></span>-->
-<!--  </a>-->
-<!--</div>-->
-<!--</div>-->
-<!--<body style="background-color:rgb(0, 0, 0) ">-->
-<!-- <h2 style="color;white"> Get your items down below and SHOP NOW!</h2>-->
-<!--  <div class="card">-->
-<!--    <div class="card-body">Social</div>-->
-<!--  </div>-->
-<!--  <br>-->
-<!--  <div class="card bg-primary text-white">-->
-<!--    <div class="card-body">Clothing</div>-->
-<!--  </div>-->
-<!--  <br>-->
-<!--  <div class="card bg-success text-white">-->
-<!--    <div class="card-body">Xbox</div>-->
-<!--  </div>-->
-<!--  <br>-->
-<!--  <div class="card bg-info text-white">-->
-<!--    <div class="card-body">Playstation</div>-->
-<!--  </div>-->
-<!--  <br>-->
-<!--  <div class="card bg-warning text-white">-->
-<!--    <div class="card-body">PCs</div>-->
-<!--  </div>-->
-<!--  <br>-->
-<!--  <div class="card bg-danger text-white">-->
-<!--    <div class="card-body">Monitors</div>-->
-<!--  </div>-->
-<!--  <br>-->
-<!--  <div class="card bg-secondary text-white">-->
-<!--    <div class="card-body">Video Games</div>-->
-<!--  </div>-->
-<!--  <br>-->
-<!--  <div class="card bg-dark text-white">-->
-<!--    <div class="card-body">Mice</div>-->
-<!--  </div>-->
-<!--  <br>-->
-<!--  <div class="card bg-light text-dark">-->
-<!--    <div class="card-body">Headsets</div>-->
-<!--  </div>-->
-<!--</div>-->
+ <!-- Left and right controls -->
+  <a class="carousel-control-prev" href="#demo" data-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </a>
+  <a class="carousel-control-next" href="#demo" data-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </a>
 
-  
-
-<!--<hr>-->
-
-
-<!--<p>-->
-    
-<!--</p>-->
+</div>
 
 </body>
 </html>
