--- a/tributeCite/index.html
+++ b/tributeCite/index.html
@@ -18,6 +18,22 @@
         </title>
     </head>
     <body>
+       <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="index.html">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="Shop.html">Shop</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="Clips.html">About Me</a>
+    </li>
+   <li class="nav-item">
+      <a class="nav link" href="../tributeCite/index.html">TributeCite</a>
+    </li> 
+  </ul>
+</nav>
     <div class="jumbotron">
         <h1>
             Ruth Bader Ginsburg </h1>
