--- a/webFinal/Clips.html
+++ b/webFinal/Clips.html
@@ -12,6 +12,44 @@
 </title>
 </head>
 <body>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="index.html">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="Shop.html">Shop</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="Clips.html">About Me</a>
+    </li>
+   <li class="nav-item">
+      <a class="nav link" href="../tributeCite/index.html">TributeCite</a>
+    </li> 
+  </ul>
+</nav>
+    <div class="jumbotron" style="background-color:#000000">
+  <h1 style="color:white">Bryan's About Me Section</h1> 
+  <p style="color:white">Look at what Bryan does and what his favorite things are in the About Section :)</p> 
+</div>
+<div class="row">
+    <div class="col-lg-6">
+        <iframe width="850" height="450"
+src="https://youtu.be/d2UBGNwNqNM">
+</iframe>
+    </div>
+
+ <div class="col-lg-6">
+        <iframe width="850" height="450"
+src="https://youtu.be/RQyzDBmRato">
+</iframe>
+    </div>
+    </div>
+    <hr>
+    <div class="jumbotron" style="background-color:#000000">
+  <h1 style="color:white">About Me</h1> 
+  <p style="color:white">My name is Bryan Dominguez and I am a student at Lane Tech. Some of my favorite things to do are play videogames and watch Tv. Pretty average. My favorite game is Fortnite and I like Dragon Ball Z . I play Soccer and have won money from playing in Fortnite Tournament. And that is it for the about me section.</p> 
+</div>
 
 <h1>
     
