--- a/webFinal/Shop.html
+++ b/webFinal/Shop.html
@@ -12,7 +12,93 @@
 </title>
 </head>
 <body>
+   <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="index.html">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="Shop.html">Shop</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="Clips.html">About Me</a>
+    </li>
+   <li class="nav-item">
+      <a class="nav link" href="../tributeCite/index.html">TributeCite</a>
+    </li> 
+  </ul>
+</nav>
+    <div class="jumbotron" style="background-color:#000000">
+  <h1 style="color:white">Bryan's Shopping Section</h1> 
+  <p style="color:white">Shopping at its finest with the new online shopping section</p> 
+</div>
 
+
+<div class="row">
+    <div class="col-lg-4">
+        <div class="card" style="width:400px">
+  <img class="card-img-top" src="images/Astro2.jpg" alt="Astros">
+  <div class="card-body">
+    <h4 class="card-title">Headsets</h4>
+    <p class="card-text">New headsets available for sale. Shop Now! </p>
+    <a href="#" class="btn btn-primary">Shop</a>
+  </div>
+</div>
+    </div>
+
+
+    <div class="col-lg-4">
+        <div class="card" style="width:400px">
+            <img class="card-img-top" src="images/Xbox.1.png" alt="Xbox">
+            <div class="card-body">
+                <h4 class="card-title">Xbox</h4>
+                <p class="card-text">Get the best games available for Xbox and Preorder the new Xbox One S</p>
+                <a href="#" class="btn btn-primary">Shop</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-lg-4">
+        <div class="card" style="width:400px">
+            <img class="card-img-top" src="images/Playstation.jpeg" alt="Playstation">
+            <div class="card-body">
+                <h4 class="card-title">Playstation</h4>
+                <p class="card-text">Get the best games available for Playstation and get Playstation Plus</p>
+                <a href="#" class="btn btn-primary">Shop</a>
+            </div>
+        </div>
+    </div>
+<div class="col-lg-4">
+        <div class="card" style="width:400px">
+            <img class="card-img-top" src="images/gaming-monitors.jpg" alt="Monitors">
+            <div class="card-body">
+                <h4 class="card-title">Monitors</h4>
+                <p class="card-text">Play with the best and the biggest screens around!!</p>
+                <a href="#" class="btn btn-primary">Shop</a>
+            </div>
+        </div>
+    </div>
+<div class="col-lg-4">
+        <div class="card" style="width:400px">
+            <img class="card-img-top" src="images/pcs.jpg" alt="PCs">
+            <div class="card-body">
+                <h4 class="card-title">PCs</h4>
+                <p class="card-text">Run your games without worry!!</p>
+                <a href="#" class="btn btn-primary">Shop</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-4">
+        <div class="card" style="width:400px">
+            <img class="card-img-top" src="images/mice.1.jpg" alt="Mice">
+            <div class="card-body">
+                <h4 class="card-title">Mice</h4>
+                <p class="card-text">Play with the smoothest Mice around!</p>
+                <a href="#" class="btn btn-primary">Shop</a>
+            </div>
+        </div>
+    </div>
+    
 <h1>
     
 </h1>
