--- a/webFinal/index.html
+++ b/webFinal/index.html
@@ -14,24 +14,24 @@
 <body >
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <ul class="navbar-nav">
-    <li class="nav-item active">
-      <a class="nav-link" href="#">Home</a>
+    <li class="nav-item">
+      <a class="nav-link" href="index.html">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Shop</a>
+      <a class="nav-link" href="Shop.html">Shop</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">About Me / Clips</a>
+      <a class="nav-link" href="Clips.html">About Me</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link " href="#">Support</a>
-    </li>
+   <li class="nav-item">
+      <a class="nav link" href="../tributeCite/index.html">TributeCite</a>
+    </li> 
   </ul>
 </nav>
 
-<div class="jumbotron" style="background-color:#800000">
-  <h1>Bryan's Game Shop</h1> 
-  <p>Bryan's Shop, get your gear at the best discounts and get the best setups around. This is also a website on a guy who likes to play videogames most of his time and not do homework. :( :)</p> 
+<div class="jumbotron" style="background-color:#000000">
+  <h1 style="color:white">Bryan's Game Shop</h1> 
+  <p style="color:white">Bryan's Shop, get your gear at the best discounts and get the best setups around. This is also a website on a guy who likes to play videogames most of his time and not do homework. Down Below are his favorite games and things he likes.</p> 
 </div>
 
 
@@ -78,53 +78,62 @@
 <!--  </a>-->
 <!--</div>-->
 <!--</div>-->
-<!--<body style="background-color:rgb(0, 0, 0) ">-->
-<!-- <h2 style="color;white"> Get your items down below and SHOP NOW!</h2>-->
-<!--  <div class="card">-->
-<!--    <div class="card-body">Social</div>-->
-<!--  </div>-->
-<!--  <br>-->
-<!--  <div class="card bg-primary text-white">-->
-<!--    <div class="card-body">Clothing</div>-->
-<!--  </div>-->
-<!--  <br>-->
-<!--  <div class="card bg-success text-white">-->
-<!--    <div class="card-body">Xbox</div>-->
-<!--  </div>-->
-<!--  <br>-->
-<!--  <div class="card bg-info text-white">-->
-<!--    <div class="card-body">Playstation</div>-->
-<!--  </div>-->
-<!--  <br>-->
-<!--  <div class="card bg-warning text-white">-->
-<!--    <div class="card-body">PCs</div>-->
-<!--  </div>-->
-<!--  <br>-->
-<!--  <div class="card bg-danger text-white">-->
-<!--    <div class="card-body">Monitors</div>-->
-<!--  </div>-->
-<!--  <br>-->
-<!--  <div class="card bg-secondary text-white">-->
-<!--    <div class="card-body">Video Games</div>-->
-<!--  </div>-->
-<!--  <br>-->
-<!--  <div class="card bg-dark text-white">-->
-<!--    <div class="card-body">Mice</div>-->
-<!--  </div>-->
-<!--  <br>-->
-<!--  <div class="card bg-light text-dark">-->
-<!--    <div class="card-body">Headsets</div>-->
-<!--  </div>-->
-<!--</div>-->
+<hr>
+<div id="center">
+<div id="demo" class="carousel slide" data-ride="carousel">
 
-  
-
-<!--<hr>-->
-
-
-<!--<p>-->
+  <!-- Indicators -->
+  <ul class="carousel-indicators">
+    <li data-target="#demo" data-slide-to="0" class="active"></li>
+    <li data-target="#demo" data-slide-to="1"></li>
+    <li data-target="#demo" data-slide-to="2"></li>
+    <li data-target="#demo" data-slide-to="3"></li>
+    <li data-target="#demo" data-slide-to="4"></li>
+  </ul>
+  <div class="container-fluid">
     
-<!--</p>-->
+  <div class="row">
+    <div class="col-lg-4">
+ <div class="card" style="width:400px">
+  <img class="card-img-top" src="images/Xbox1.jpg" alt="Xbox Controller">
+  <div class="card-body">
+    <h4 class="card-title">Xbox</h4>
+    <p class="card-text">I like to play on Xbox. One of my hobbies are to play videogames and I really enjoy playing on an Xbox because the controller is way bigger than the PS4 controller to its a better controller overall, and I like the designs and the hardwork they put into the Console.</p>
+      </div>
+       </div>
+        </div>
+     <div class="col-lg-4">
+   <div class="card" style="width:400px">
+  <img class="card-img-top" src="images/Soccer.jpeg" alt="Messi">
+  <div class="card-body">
+    <h4 class="card-title">Soccer</h4>
+    <p class="card-text">One of my favorite spors to play is Soccer. I've played soccer most of my life but I've recently stop playing. My favorite soccer player is Messi because he is an iconic player and his skills are out of this world. Overall he is a great player and he is the best.</p>
+   
+  </div>
+</div>
+</div>
+  <div class="col-lg-4">
+   <div class="card" style="width:400px">
+  <img class="card-img-top" src="images/fortnite.jpg" alt="Videogames">
+  <div class="card-body">
+    <h4 class="card-title">Videogames</h4>
+    <p class="card-text"> Another one of my hobbies are videogames. Videogames are a platform where you forget everything else and you can be whoever you want and that's what videogames did to me. My favorite game is Fortnite and I like this game because when it came out it was iconic it was different than other games and it helped me win money.</p>
+   
+  </div>
+</div>
+</div>
+<div class="col-lg-4">
+   <div class="card" style="width:400px">
+  <img class="card-img-top" src="images/dragon.jpeg" alt="DBS">
+  <div class="card-body">
+    <h4 class="card-title">Dragon Ball Z</h4>
+    <p class="card-text"> One of my favorite shows is Dragon Ball Z. I watched it when I was younger and still watch it today because how the characters are strong and it is a show since the 1990's so it for it to survive this long is astonishing. </p>
+   
+  </div>
+</div>
+</div>
+  </div>
+   </div>
 
 </body>
 </html>
