--- a/webFinal/index.html
+++ b/webFinal/index.html
@@ -132,8 +132,52 @@
   </div>
 </div>
 </div>
+<div class="col-lg-4">
+   <div class="card" style="width:400px">
+  <img class="card-img-top" src="images/ball.jpg" alt="Basketball">
+  <div class="card-body">
+    <h4 class="card-title">Basketball</h4>
+    <p class="card-text"> Another one of my favorite sports is Basketball. I'm not that good at Basketball but I know how to pass and dribble so its fine. </p>
+   
+  </div>
+</div>
+</div>
+<div class="col-lg-4">
+   <div class="card" style="width:400px">
+  <img class="card-img-top" src="images/nyc.jpg" alt="Basketball">
+  <div class="card-body">
+    <h4 class="card-title">Place to Visit in the Future</h4>
+    <p class="card-text"> One place I want to visit in the future is NYC because in 8th Grade I went there and it was a beautiful place to see and I would like to go again. </p>
+   
   </div>
    </div>
+ <div>
+   <h1 style="color:white">Storyboard 1
+  
+</h1>
+<h2>
+  <a href="images/0.jpg">Link 1</a>
+</h2>
+   </div>
+
+<h1>
+     <h1 style="color:white">Storyboard 2
+  
+</h1>
+<h2>
+  <a href="images/1.jpg">Link 2</a>
+</h2>
+<h1>
+     <h1 style="color:white">Storyboard 3
+  
+</h1>
+<h2>
+  <a href="images/2.jpg">Link 3</a>
+</h2>
+   </div>
+
+
+</h1>
 
 </body>
 </html>
